--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
       Find Jobs
     </button>
     <button class="btn btn-outline-primary btn-lg px-4">
-      Find Employees
+      Post jobs
     </button>
   </div>
 
