--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
   <div class="container">
     
     <!-- Logo -->
-    <a class="navbar-brand fw-bold" href="#">
+    <a class="navbar-brand fw-bold" href="{% url 'home'%}">
       JobPortal
     </a>
 
@@ -39,8 +39,8 @@
 
       <!-- Right Side -->
       <div class="d-flex gap-2">
-        <a href="#" class="btn btn-outline-light btn-sm">Login</a>
-        <a href="#" class="btn btn-light btn-sm text-primary fw-semibold">Register</a>
+        <a href="{%url 'login'%}" class="btn btn-outline-light btn-sm">Login</a>
+        <a href="{%url 'register'%}" class="btn btn-light btn-sm text-primary fw-semibold">Register</a>
       </div>
     </div>
 
