--- a/templates/home.html
+++ b/templates/home.html
@@ -19,6 +19,37 @@
     </button>
   </div>
 
+  <div class="container mt-4">
+  <div class="row g-4">
+
+    {% for job in jobs %}
+      <div class="col-md-6 col-lg-4">
+        <div class="card h-100 shadow-sm">
+          <div class="card-body">
+            <h5 class="card-title">{{ job.title }}</h5>
+
+            <span class="badge bg-primary mb-2">
+              {{ job.job_type }}
+            </span>
+
+            <p class="card-text mt-2">
+              📍 {{ job.job_location }}
+            </p>
+          </div>
+
+          <div class="card-footer bg-white border-0">
+            <a href="{% url 'jobs:show_job_details' job.id %}" class="btn btn-outline-primary btn-sm">
+              View Details
+            </a>
+          </div>
+        </div>
+      </div>
+    {% endfor %}
+
+  </div>
+</div>
+
+
 </div>
 
 
