--- a/templates/login.html
+++ b/templates/login.html
@@ -1,9 +1,38 @@
-{% extends 'base.html'%}
+{% extends 'base.html' %}
 
 {% block content %}
-<form method="POST">
-    {%csrf_token%}
-{{form}}
-<button type="submit">Submit</button>
-</form>
+<div class="container mt-5">
+  <div class="row justify-content-center">
+    <div class="col-md-5">
+
+      <div class="card shadow-sm">
+        <div class="card-body">
+
+          <h4 class="card-title text-center mb-4">
+            Login
+          </h4>
+
+          <form method="POST">
+            {% csrf_token %}
+
+            {{ form.as_p }}
+
+            <div class="d-grid mt-3">
+              <button type="submit" class="btn btn-primary">
+                Login
+              </button>
+            </div>
+          </form>
+
+          <p class="text-center mt-3 mb-0">
+            Don’t have an account?
+            <a href="{% url 'register' %}">Register</a>
+          </p>
+
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
 {% endblock %}
