--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
     <title>Job Portal</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
+
+
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm">
   <div class="container">
@@ -40,7 +42,7 @@
       <!-- Right Side -->
       <div class="d-flex gap-2">
         <a href="{%url 'login'%}" class="btn btn-outline-light btn-sm">Login</a>
-        <a href="{%url 'register'%}" class="btn btn-light btn-sm text-primary fw-semibold">Register</a>
+        <a href="{%url 'register'%}" class="btn btn-outline-light btn-sm">Register</a>
       </div>
     </div>
 
