--- a/templates/home.html
+++ b/templates/home.html
@@ -10,14 +10,28 @@
     Find jobs or find employees
   </h2>
 
-  <div class="d-flex justify-content-center gap-3">
+  <!-- <div class="d-flex justify-content-center gap-3">
     <button class="btn btn-primary btn-lg px-4">
       Find Jobs
     </button>
     <button class="btn btn-outline-primary btn-lg px-4">
       Post jobs
     </button>
+  </div> -->
+
+  <!-- Search Bar -->
+  <nav class="navbar navbar-light">
+  <div class="container-fluid justify-content-center">
+    <form method = 'GET' action="{% url 'search'%}" class="d-flex w-50">
+      <input class="form-control me-2" type="search"
+             placeholder="Search for Jobs" aria-label="Search" name="keyword">
+      <button class="btn btn-outline-success" type="submit">
+        Search
+      </button>
+    </form>
   </div>
+</nav>
+
 
   <div class="container mt-4">
   <div class="row g-4">
